ansible/k3s/40-websites/15-blog/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
  namespace: default
  annotations:
    keel.sh/policy: "force"
    keel.sh/trigger: poll     # enable active repository checking
    keel.sh/pollSchedule: "@every 5m"

spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: blog
      annotations:
        container.apparmor.security.beta.kubernetes.io/webserver: runtime/default
        seccomp.security.alpha.kubernetes.io/pod: runtime/default
    spec:
      volumes:
        - name: run
          emptyDir:
            medium: ""
        - name: log
          emptyDir:
            medium: ""
        - name: cache
          emptyDir:
            medium: ""
      containers:
        - name: webserver
          image: "ghcr.io/stefanabl/blog:main"
          # Needed for keel to work without semver tags
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: "500m"
              memory: 300Mi
          ports:
            - containerPort: 8080
              name: website
          volumeMounts:
            - name: run
              mountPath:  /var/run
            - name: log
              mountPath:  /var/log/nginx
            - name: cache
              mountPath:  /var/cache/nginx
          readinessProbe:
            httpGet:
              path: /index.html
              port: 8080
              # httpHeaders:
              # - name: Custom-Header
              #   value: Awesome
            initialDelaySeconds: 10
            periodSeconds: 5
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
      securityContext:
        fsGroup: 1000
      automountServiceAccountToken: false
status: {}
